tests/NormalTests/paczka1/fuzzy1/86311786.err
Error in line 3: voN]QU S306 1,9
Error in line 4: u90G S365 36,6
Error in line 2: voN2QU S306 0,6
